# stable_genius

./: .gitignore  COPYING  Makefile.am  README  aclocal.m4  configure  configure.ac
disks/: Makefile.am  make_sda1.sh  make_sda2.sh  make_sdb1.sh  make_sdb2.sh
kernel/: Makefile.am  grub.cfg  link.ld
kernel/asm/: interrupt.s  io.s  launch_process.s  load_gdt.s  loader.s  paging.s  yield.s
kernel/cpp/: AOut.cpp  DevFileSystem.cpp  Device.cpp  DiskPartition.cpp  Elf.cpp  Ext.cpp  File.cpp  FileSystem.cpp  Gdt.cpp  Ide.cpp  Idt.cpp  InterruptHandler.cpp  Kernel.cpp  KernelHeap.cpp  Keyboard.cpp  Logger.cpp  MemoryFileSystem.cpp  MultiBoot.cpp  PageDescriptorTable.cpp  PageFrameAllocator.cpp  Pci.cpp  Pic.cpp  Pit.cpp  ProcTable.cpp  Process.cpp  Ps2Controller.cpp  RttiTest.cpp  Scheduler.cpp  Serial.cpp  SignalManager.cpp  Syscall.cpp  Tty.cpp  Vbe.cpp  VgaController.cpp  VgaCursor.cpp  VgaIo.cpp  kernel_main.cpp  klib_cstdlib_impl.cpp  no_heap_util.cpp  util.cpp
kernel/include/: AOut.h  DevFileSystem.h  Device.h  DiskPartition.h  Elf.h  Ext.h  File.h  FileSystem.h  Gdt.h  Ide.h  Idt.h  InterruptHandler.h  Kernel.h  KernelHeap.h  Keyboard.h  Logger.h  MemoryFileSystem.h  MultiBoot.h  PageDescriptorTable.h  PageFrameAllocator.h  Pci.h  Pic.h  Pit.h  ProcTable.h  Process.h  Ps2Controller.h  RttiTest.h  Scheduler.h  Serial.h  SignalManager.h  Syscall.h  Tty.h  Vbe.h  VgaController.h  VgaCursor.h  VgaIo.h  interrupt.h  io.h  no_heap_util.h  paging.h  (+1 more)
stdlib/: Makefile.am
stdlib/asm/: syscalls.s
stdlib/cpp/: UserHeap.cpp  cctype.cpp  cmath.cpp  cstdio.cpp  cstdlib.cpp  cstring.cpp  cwchar.cpp  cxxabi.cpp  exception.cpp  initialise.cpp  ios.cpp  iostream.cpp  istream.cpp  new.cpp  ostream.cpp  stdexcept.cpp  string.cpp  system_error.cpp  typeinfo.cpp
stdlib/crt/: crt0.s  crti.s  crtn.s
stdlib/include/: UserHeap.h  algorithm  array  cctype  cerrno  cmath  cstdio  cstdlib  cstring  cwchar  cxxabi  exception  fcntl.h  fstream  functional  initialise.h  initializer_list  ios  iostream  istream  iterator  limits  map  memory  new  ostream  rbtree  sstream  stdexcept  streambuf  string  system_error  type_traits  typeinfo  unistd.h  utility  vector
stdlib/test/: algorithm_test.cpp  array_test.cpp  cctype_test.cpp  cmath_test.cpp  cstdio_test.cpp  cstdlib_test.cpp  cstring_test.cpp  cwchar_test.cpp  functional_test.cpp  ifstream_test.cpp  ios_test.cpp  istringstream_test.cpp  iterator_test.cpp  limits_test.cpp  map_test.cpp  memcheck.sh  memory_test.cpp  ofstream_test.cpp  ostringstream_test.cpp  rbtree_test.cpp  string_test.cpp  type_traits_test.cpp  utility_test.cpp  vector_test.cpp
user/etc/: Makefile.am  foo.conf
user/src/: Makefile.am
user/src/init/: Makefile.am  main.cpp  start.s
user/src/sgsh/: Makefile.am  start.s
